software-center (3.1.18) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * added "Was this review useful" feature
  * added "Offline cache for reviews" feature 
    (needs latest python-piston-mini-client to work)
  * debian/control:
    - depend on latest python-piston-mini-client

  [ Kiwinote ]
  * softwarecenter/distro/Ubuntu.py:
    - we can't download an icon for a featured application if the cache is not
      ready (LP: #711857, LP: #717337)
  * softwarecenter/view/appdetailsview_gtk.py:
    - don't crash if app_details has no desktop_file (LP: #716245)
  * softwarecenter/view/purchaseview.py:
    - open external links in default browser (LP: #640520)
  * softwarecenter/view/softwarepane.py:
    - play nicely if we click on an app before the cache is ready (LP: #691321)
    - minor grammar tweak for Dylan McCall (LP: #717410)

  [ Gary Lasker ]
  * softwarecenter/enums.py,
    softwarecenter/utils.py,
    softwarecenter/models/viewswitcherlist.py,
    softwarecenter/view/pendingview.py:
    - generalize get_icon_from_iconname method, wire it up
    - fix crash if an icon can't be found (LP: #716111)
    - try a different, subjectively better-suited icon for the history item
      (one that is also included in gnome-icon-theme)

 -- Gary Lasker <gary.lasker@canonical.com>  Mon, 14 Feb 2011 21:59:37 -0500

software-center (3.1.17.1) natty; urgency=low

  * utils/update-software-center:
    - fix crash in postinst

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 11 Feb 2011 13:23:10 +0100

software-center (3.1.17) natty; urgency=low

  [ Michael Vogt ]
  * test/Makefile:
    - do no longer depend on mago checkout, natty has the version
      we need now
  * test/mago/test_with_mago.py:
    - add scrolldown test
  * merged lp:~didrocks/software-center/fix-never-visible-tech-items,
    many thanks to Didier Roche
  * softwarecenter/paths.py:
    - consolidate all pathes in this file and update the code to use
      it