@@ -1,7 +1,8 @@
 software-center (3.1.18) UNRELEASED; urgency=low
 
   [ Michael Vogt ]
-  * added "Was this review useful" feature
+  * added "Was this review useful" feature (currently hidden
+    pending rollout of server support)
   * added "Offline cache for reviews" feature 
     (needs latest python-piston-mini-client to work)
   * debian/control:
@@ -29,7 +30,7 @@ software-center (3.1.18) UNRELEASED; urgency=low
     - try a different, subjectively better-suited icon for the history item
       (one that is also included in gnome-icon-theme)
 
- -- Gary Lasker <gary.lasker@canonical.com>  Mon, 14 Feb 2011 21:59:37 -0500
+ -- Gary Lasker <gary.lasker@canonical.com>  Tue, 15 Feb 2011 11:18:43 -0500
 
 software-center (3.1.17.1) natty; urgency=low
 
